call to action button spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ button {
   color: #fff;
   border-radius: 3px;
   font-size: 18px;
-  margin-top: 10px;
+  margin-top: 5px;
   cursor: pointer;
   transition: 350ms;
 }
